--- a/main.tex
+++ b/main.tex
@@ -15,16 +15,16 @@
 \include{journals}	
 
 
-\title[Search for QPOs in the gamma-ray emission of Perseus] %% give here short title %%
+\title[Search for $\gamma$-ray QPOs in Perseus] %% give here short title %%
 {Search for QPOs in Perseus with \textit{Fermi} LAT}
 
 \author[Nemmen, de Menezes \& Paschalidis]   %% give here short author list %%
 {Rodrigo Nemmen$^1$, Raniere de Menezes$^1$
 %%  \thanks{Present address: Fluid Mech Inc., 24 The Street, Lagos, Nigeria.},
- \and Vasilios Paschalidis$^2$}
+ \and Vasileios Paschalidis$^2$}
 
 \affiliation{$^1$Universidade de S\~ao Paulo, Instituto de Astronomia, Geof\'{\i}sica e Ci\^encias Atmosf\'ericas, Departamento de Astronomia,\\ S\~ao Paulo, SP 05508-090, Brazil \\ email: {\tt rodrigo.nemmen@iag.usp.br} \\[\affilskip]
-$^2$Theoretical Astrophysics Program, Departments of Astronomy and Physics, \\ University of Arizona, 933 N. Cherry Ave., Tucson, AZ 85721}
+$^2$Depts. of Astronomy \& Physics, University of Arizona}
 
 \pubyear{2018}
 \volume{342}  %% insert here IAU Symposium No.
@@ -54,7 +54,7 @@ In this contribution, we will not address the gamma-ray emission due to the gala
 
 \section{Gamma-ray flares in NGC 1275}
 
-The broadband emission of NGC 1275 has been varying dramatically over the last forty years in radio (\cite[Dutson et al. 2014]{Dutson2014}). More recently, NGC 1275 has been showing increased activity and flaring in the gamma-ray band (\cite[Tanada et al. 2018]{Tanada2018}), with a broad correspondence between the high-frequency radio data and gamma-rays. NGC 1275 is also detected at TeV energies during periods of $\gamma$-ray flaring (\cite[Aleksic et al. 2012]{Aleksic2012}).
+The broadband emission of NGC 1275 has been varying dramatically over the last forty years in radio (\cite[Dutson et al. 2014]{Dutson2014}). More recently, NGC 1275 has been showing increased activity and flaring in the gamma-ray band (\cite[Tanada et al. 2018]{Tanada2018}), with a broad correspondence between the high-frequency radio data and gamma-rays. NGC 1275 is also detected at TeV energies during epochs of $\gamma$-ray flaring (\cite[Aleksic et al. 2012]{Aleksic2012}).
 
 Recently, \cite{Tanada2018} presented an analysis of eight years of Fermi-LAT (0.1-300 GeV) $\gamma$-ray observations for NGC 1275 (cf. Figure 1 in Tanada et al.). Besides finding that  the gamma-flux has been steadily increasing and is highly variable on short timescales (days to weeks--cf. also contribution of Sahakyan who reports variability on timescales of hours; \cite[Baghmanyan et al. 2017]{Baghmanyan2017}), Tanada et al. also found two distinct periods of flaring activity.
 \begin{description}
@@ -99,7 +99,7 @@ Figure \ref{lc} shows NGC 1275's LC extracted with standard analysis parameters 
 \begin{figure}[h]
 % \vspace*{-2.0 cm}
 \begin{center}
-\includegraphics[width=0.7\linewidth]{figures/observations.pdf} 
+\includegraphics[width=0.7\linewidth]{observations.pdf} 
 % \vspace*{-1.0 cm}
 \caption{NGC 1275 $\gamma$-ray light curve observed with \textit{Fermi}-LAT. Upper panel: LC with bins of 2 days. Lower panel: LC with bins of 20 days after a linear detrending.}
 \label{lc}
@@ -113,7 +113,7 @@ No QPOs are clearly evident in this figure.
 \begin{figure}[h]
 % \vspace*{-2.0 cm}
 \begin{center}
-\includegraphics[width=0.8\linewidth, page=1, trim=0 300 150 0,clip=true]{figures/plots.pdf} 
+\includegraphics[width=0.8\linewidth, page=1, trim=0 300 150 0,clip=true]{plots.pdf} 
 % \vspace*{-1.0 cm}
 \caption{Power spectra computed with the Fourier (blue line) and  Lomb-Scargle methods (red line). The black line shows a red noise fit to the LC.  }
 \label{fourier}
@@ -125,7 +125,7 @@ To settle the issue, we used the Bayesian QPO search procedure outlined in \cite
 \begin{figure}[h]
 % \vspace*{-2.0 cm}
 \begin{center}
-\includegraphics[width=\linewidth, page=2, trim=50 0 50 0,clip=true]{figures/plots.pdf} 
+\includegraphics[width=\linewidth, page=2, trim=50 0 50 0,clip=true]{plots.pdf} 
 % \vspace*{-1.0 cm}
 \caption{Results of Bayesian QPO search applied to NGC 1275's light curve. The arrow indicates one potential QPO, which is consistent with the rocking period of the \textit{Fermi} satellite. }
 \label{bayes}
@@ -143,7 +143,7 @@ it should be mentioned that in the BBH model, the relative positions of the peak
 \begin{figure}[h]
 % \vspace*{-2.0 cm}
 \begin{center}
-\includegraphics[width=\linewidth]{figures/periods_ls-min_diff.png} 
+\includegraphics[width=\linewidth]{periods_ls-min_diff.png} 
 % \vspace*{-1.0 cm}
 \caption{Power spectrum for the light curve computed with the Fourier (blue line) and  Lomb-Scargle methods (red line). The black line shows a red noise fit to the LC.  }
 \label{bhb}
