minor changes suggested by Alberto Dominguez

--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 \author[Nemmen, de Menezes \& Paschalidis]   %% give here short author list %%
 {Rodrigo Nemmen$^1$, Raniere de Menezes$^1$
 %%  \thanks{Present address: Fluid Mech Inc., 24 The Street, Lagos, Nigeria.},
- \and Vasileios Paschalidis$^2$}
+ \and Vasileios Paschalidis$^2$, on behalf of \textit{Fermi}-LAT Collaboration}
 
 \affiliation{$^1$Universidade de S\~ao Paulo, Instituto de Astronomia, Geof\'{\i}sica e Ci\^encias Atmosf\'ericas, Departamento de Astronomia,\\ S\~ao Paulo, SP 05508-090, Brazil \\ email: {\tt rodrigo.nemmen@iag.usp.br} \\[\affilskip]
 $^2$Depts. of Astronomy \& Physics, University of Arizona}
@@ -30,7 +30,7 @@ $^2$Depts. of Astronomy \& Physics, University of Arizona}
 \volume{342}  %% insert here IAU Symposium No.
 \setcounter{page}{1}
 \jname{Perseus in Sicily: from black hole to cluster outskirts}
-\editors{K. Asada, E. Gouveia dal Pino, H. Nagai \& R. Nemmen, eds.}
+\editors{K. Asada, M. Giroletti, E. Gouveia dal Pino, H. Nagai, R. Nemmen, eds.}
 \begin{document}
 
 \maketitle
@@ -48,7 +48,7 @@ We report the analysis of the gamma-ray variability of NGC 1275--the radio galax
 % NGC1275 is a radio galaxy inhabiting the center of a galaxy cluster 
 NGC 1275 is the brightest central galaxy in the nearby Perseus galaxy cluster. It is a radio galaxy producing collimated, relativistic jets of particles outflowing from its center at velocities $0.3-0.5c$ \cite[(Walker, Romney \& Benson 1994)]{Walker1994}. These jets are strongly interacting with the intracluster medium, heating it up, offsetting radiative cooling and creating X-ray bright cavities where star formation is quenched (e.g. contributions by Churazov, Zuravleva in these proceedings). 
 
-Importantly, the center of NGC 1275 is the \textit{brightest gamma-ray emitter} (e.g. \cite[Abdo et al. 2009]{ngc1275LAT}) among nearby AGN. The availability of a high-quality, high-cadence light curve (LC) observed with \textit{Fermi}-LAT for NGC 1275 over the last 9 years with uniform sampling make this galaxy not only a remarkable laboratory for high-energy astrophysical processes around black holes in the nearby universe but also an ideal place for mining for interesting time-domain signals due to e.g. potential massive binary black holes. 
+Importantly, the center of NGC 1275 is the \textit{brightest gamma-ray emitter} (e.g. \cite[Abdo et al. 2009]{ngc1275LAT}) among nearby active galactic nuclei (AGN). The availability of a high-quality, high-cadence light curve (LC) observed with \textit{Fermi}-LAT for NGC 1275 over the last nine years with uniform sampling make this galaxy not only a remarkable laboratory for high-energy astrophysical processes around black holes in the nearby universe but also an ideal place for mining for interesting time-domain signals due to e.g. potential massive binary black holes. 
 
 In this contribution, we will not address the gamma-ray emission due to the galaxy cluster itself; instead, our focus is on the AGN activity. Galaxy clusters are not detected in gamma-rays, an observation that challenges the simplest hadronic models and implies a low energy density in cosmic rays (\cite[Ackermann et al. 2014]{Ackermann2014}). 
 
@@ -56,7 +56,7 @@ In this contribution, we will not address the gamma-ray emission due to the gala
 
 The broadband emission of NGC 1275 has been varying dramatically over the last forty years in radio (\cite[Dutson et al. 2014]{Dutson2014}). More recently, NGC 1275 has been showing increased activity and flaring in the gamma-ray band (\cite[Tanada et al. 2018]{Tanada2018}), with a broad correspondence between the high-frequency radio data and gamma-rays. NGC 1275 is also detected at TeV energies during epochs of $\gamma$-ray flaring (\cite[Aleksic et al. 2012]{Aleksic2012}).
 
-Recently, \cite{Tanada2018} presented an analysis of eight years of Fermi-LAT (0.1-300 GeV) $\gamma$-ray observations for NGC 1275 (cf. Figure 1 in Tanada et al.). Besides finding that  the gamma-flux has been steadily increasing and is highly variable on short timescales (days to weeks--cf. also contribution of Sahakyan who reports variability on timescales of hours; \cite[Baghmanyan et al. 2017]{Baghmanyan2017}), Tanada et al. also found two distinct periods of flaring activity.
+Recently, \cite{Tanada2018} presented an analysis of eight years of \textit{Fermi}-LAT (0.1-300 GeV) $\gamma$-ray observations for NGC 1275 (cf. Figure 1 in Tanada et al.). Besides finding that  the gamma-flux has been steadily increasing and is highly variable on short timescales (days to weeks--cf. also contribution of Sahakyan who reports variability on timescales of hours; \cite[Baghmanyan et al. 2017]{Baghmanyan2017}), Tanada et al. also found two distinct periods of flaring activity.
 \begin{description}
 	\item[Period A] \ From $\approx 2009$ to 2011, strong variability in spectral index, quiescent flux
 	\item[Period B] \ From $\approx 2013$ to 2016, spectral index does not change much, strong variation in flux
@@ -94,7 +94,7 @@ All of these processes can introduce characteristic QPOs in the NGC 1275 gamma L
 
 We used three methods to search for the presence of QPOs in the gamma LC of NGC 1275: Fourier transform, continuous wavelet transform and a Bayesian QPO search framework. In our experience, the most robust method for QPO search was the Bayesian method as we will describe below. As pointed out before (\cite[Vaughan et al. 2016]{Vaughan2016} and references therein), one must be very careful in properly modeling the power spectrum (e.g. red noise, power-law) when searching for QPOs. 
 
-Figure \ref{lc} shows NGC 1275's LC extracted with standard analysis parameters in the energy range 0.1-300 GeV from a circular region of radius $15^{\circ}$ (Pass 8). The spectral index was left free to vary. We used the Fermi Science Tools version v10r0p5. Whereas the upper panel clearly demonstrates the progressive increase in the gamma flux over time, an inspection of the lower panel might suggest the potential presence of oscillatory behavior. 
+Figure \ref{lc} shows NGC 1275's LC extracted with standard analysis parameters in the energy range 0.1-300 GeV from a circular region of radius $15^{\circ}$ (Pass 8). The spectral index was left free to vary. We used the \textit{Fermi} Science Tools version v10r0p5. Whereas the upper panel clearly demonstrates the progressive increase in the gamma flux over time, an inspection of the lower panel might suggest the potential presence of oscillatory behavior. 
 
 \begin{figure}[h]
 % \vspace*{-2.0 cm}
@@ -156,6 +156,9 @@ it should be mentioned that in the BBH model, the relative positions of the peak
 
 NGC 1275 is a rich lab for investigating high-energy phenomena and black hole physics, particularly in the time domain. It has been  brightening in radio and gamma-rays and displayed gamma-ray flares over the last nine years. %with periods where nonthermal processes might be responsible, whereas in other periods a slight change in the Doppler factor (due to e.g. jet twisting) could account for the flares. 
 Processes such as Lense-Thirring precession and the presence of accreting binary black holes could introduce QPOs with periods in the $\sim$months to years range in the light curves of radio galaxies. Motivated by these prospects, we searched for the presence of QPOs in the \textit{Fermi}-LAT light curve of NGC 1275 using a range of methods including a powerful Bayesian QPO search framework. We found no evidence for periodicities of astrophysical origin. The Bayesian QPO search method employed in this work should be a powerful tool for future searches of QPOs in AGNs and blazars.
+
+Acknowledgements: The \textit{Fermi}-LAT Collaboration acknowledges support for LAT development, operation and data analysis from NASA and DOE (United States), CEA/Irfu and IN2P3/CNRS (France), ASI and INFN (Italy), MEXT, KEK, and JAXA (Japan), and the K.A.~Wallenberg Foundation, the Swedish Research Council and the National Space Board (Sweden). Science analysis support in the operations phase from INAF (Italy) and CNES (France) is also gratefully acknowledged. This work performed in part under DOE Contract DE-AC02-76SF00515.
+
 
 % how to deal with annoyance due to bibtex: https://tex.stackexchange.com/questions/124874/converting-to-bibitem-in-latex
 %\bibliography{refs}
