updated plots and editor name

--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@ $^2$Depts. of Astronomy \& Physics, University of Arizona}
 \volume{342}  %% insert here IAU Symposium No.
 \setcounter{page}{1}
 \jname{Perseus in Sicily: from black hole to cluster outskirts}
-\editors{K. Asada, M. Giroletti, E. Gouveia dal Pino, H. Nagai, R. Nemmen, eds.}
+\editors{K. Asada, M. Giroletti, E. De Gouveia Dal Pino, H. Nagai, R. Nemmen, eds.}
 \begin{document}
 
 \maketitle
@@ -113,7 +113,7 @@ No QPOs are clearly evident in this figure.
 \begin{figure}[h]
 % \vspace*{-2.0 cm}
 \begin{center}
-\includegraphics[width=0.8\linewidth, page=1, trim=0 300 150 0,clip=true]{plots.pdf} 
+\includegraphics[width=0.8\linewidth, page=1, trim=0 300 0 0,clip=true]{plots.pdf} 
 % \vspace*{-1.0 cm}
 \caption{Power spectra computed with the Fourier (blue line) and  Lomb-Scargle methods (red line). The black line shows a red noise fit to the LC.  }
 \label{fourier}
